--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "My PHP project default",
     "keywords": [],
     "version": "1.0.0-stable",
+    "minimum-stability": "dev",
     "license": "MIT",
     "authors": [
         {
