--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,12 @@
     "version": "1.0.0-stable",
     "minimum-stability": "dev",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Peter Ho",
-            "email": "hokwaichi@gmail.com",
-            "role": "Developer"
-        }
-    ],
+    "authors": [{
+		"name": "Peter Ho",
+		"email": "hokwaichi@gmail.com",
+		"role": "Developer"
+    }],
     "require": {
-        "hopeter1018/socket-cache": "dev-master"
+        "hopeter1018/framework": "dev-master"
     }
 }
