--- a/.bowerrc
+++ b/.bowerrc
@@ -10,6 +10,9 @@
         "jquery": null,
         "jquery-ui": null,
         "angulerjs": null,
+        "angular-chosen-localytics": null,
+        "bootstrap": null,
+        "angular-ui": null,
         "angular-cookies": null,
         "angular-route": null,
         "angular-resource": null,
